--- a/quartus/n64adv2_10m25sae144dev.qsf
+++ b/quartus/n64adv2_10m25sae144dev.qsf
@@ -278,6 +278,7 @@ set_global_assignment -name VERILOG_FILE ../rtl/misc/register_sync_2.v
 set_global_assignment -name VERILOG_FILE ../rtl/misc/ram2port.v
 set_global_assignment -name VERILOG_FILE ../rtl/misc/font_rom.v
 set_global_assignment -name VERILOG_FILE ../rtl/misc/gamma_table_v2.v
+set_global_assignment -name VERILOG_FILE ../rtl/misc/serial_divide.v
 
 
 set_global_assignment -name VERILOG_FILE ../rtl/ppu/n64_vinfo_ext.v
