--- a/quartus/n64adv2_10m25sae144dev.qsf
+++ b/quartus/n64adv2_10m25sae144dev.qsf
@@ -320,18 +320,17 @@ set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to N64_CLK_i
 #set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to n64adv2_ppu_u|scaler_u|sdram_ctrl_u|wr_data_r
 #set_instance_assignment -name FAST_OUTPUT_ENABLE_REGISTER ON -to n64adv2_ppu_u|scaler_u|sdram_ctrl_u|oe_data_r
 
-set_global_assignment -name OPTIMIZATION_MODE "AGGRESSIVE PERFORMANCE"
-set_global_assignment -name CYCLONEII_OPTIMIZATION_TECHNIQUE SPEED
-set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
+set_global_assignment -name OPTIMIZATION_MODE BALANCED
 set_global_assignment -name ALLOW_REGISTER_RETIMING OFF
 
+set_global_assignment -name CYCLONEII_OPTIMIZATION_TECHNIQUE SPEED
+set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
+
 set_global_assignment -name SEED 1
-
-#set_global_assignment -name PHYSICAL_SYNTHESIS_COMBO_LOGIC ON
-#set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_DUPLICATION ON
-#set_global_assignment -name ROUTER_CLOCKING_TOPOLOGY_ANALYSIS ON
-
-#set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_RETIMING ON
+set_global_assignment -name PHYSICAL_SYNTHESIS_COMBO_LOGIC ON
+set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_DUPLICATION ON
+set_global_assignment -name ROUTER_TIMING_OPTIMIZATION_LEVEL MAXIMUM
+set_global_assignment -name ROUTER_CLOCKING_TOPOLOGY_ANALYSIS ON
 
 
 
