relax timings for font rom a bit (fix some of the most timing critical paths)

--- a/quartus/n64adv2_10m25sae144dev.qsf
+++ b/quartus/n64adv2_10m25sae144dev.qsf
@@ -276,7 +276,7 @@ set_global_assignment -name VERILOG_FILE ../rtl/misc/reset_generator.v
 set_global_assignment -name VERILOG_FILE ../rtl/misc/register_sync.v
 set_global_assignment -name VERILOG_FILE ../rtl/misc/register_sync_2.v
 set_global_assignment -name VERILOG_FILE ../rtl/misc/ram2port.v
-set_global_assignment -name VERILOG_FILE ../rtl/misc/font_rom.v
+set_global_assignment -name VERILOG_FILE ../rtl/misc/font_rom_v2.v
 set_global_assignment -name VERILOG_FILE ../rtl/misc/gamma_table_v2.v
 set_global_assignment -name VERILOG_FILE ../rtl/misc/serial_divide.v
 
