--- a/quartus/n64adv2_10m25sae144dev.qsf
+++ b/quartus/n64adv2_10m25sae144dev.qsf
@@ -248,10 +248,10 @@ set_location_assignment PIN_7 -to PCB_ID_i[0]
 set_global_assignment -name TOP_LEVEL_ENTITY n64adv2_top
 
 #vh
-set_global_assignment -name VERILOG_INCLUDE_FILE ../vh/n64adv_vparams.vh
-set_global_assignment -name VERILOG_INCLUDE_FILE ../vh/n64adv_cparams.vh
-set_global_assignment -name VERILOG_INCLUDE_FILE ../vh/n64adv2_config.vh
-set_global_assignment -name VERILOG_INCLUDE_FILE ../vh/videotimings.vh
+set_global_assignment -name VERILOG_INCLUDE_FILE ../lib/n64adv_vparams.vh
+set_global_assignment -name VERILOG_INCLUDE_FILE ../lib/n64adv_cparams.vh
+set_global_assignment -name VERILOG_INCLUDE_FILE ../lib/n64adv2_config.vh
+set_global_assignment -name VERILOG_INCLUDE_FILE ../lib/videotimings.vh
 
 #ip
 set_global_assignment -name QIP_FILE ../ip/system_pll.qip
