--- a/quartus/n64adv2_10m25sae144dev.qsf
+++ b/quartus/n64adv2_10m25sae144dev.qsf
@@ -304,6 +304,14 @@ set_global_assignment -name SDC_FILE ../sdc/n64adv2.sdc
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files/10m25sae144dev
 
 
+# debug
+set_global_assignment -name ENABLE_SIGNALTAP OFF
+
+set_global_assignment -name SIGNALTAP_FILE debug/stp_scaler.stp
+
+set_global_assignment -name SIGNALTAP_FILE debug/stp_scaler_2.stp
+set_global_assignment -name USE_SIGNALTAP_FILE debug/stp_scaler_2.stp
+
 
 ## Assignments for Synthesis and Fitter
 ## ====================================
@@ -347,8 +355,6 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name ENABLE_CONFIGURATION_PINS OFF
 set_global_assignment -name FORCE_CONFIGURATION_VCCIO ON
 set_global_assignment -name VCCA_USER_VOLTAGE 3.3V
-set_global_assignment -name ENABLE_SIGNALTAP OFF
-set_global_assignment -name USE_SIGNALTAP_FILE debug/stp_scaler.stp
 set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
-set_global_assignment -name SIGNALTAP_FILE debug/stp_scaler.stp
+set_global_assignment -name SLD_FILE db/stp_scaler_2_auto_stripped.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
