--- a/quartus/n64adv2_10m25sae144dev.qsf
+++ b/quartus/n64adv2_10m25sae144dev.qsf
@@ -305,7 +305,7 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files/10m25sae144dev
 
 
 # debug
-set_global_assignment -name ENABLE_SIGNALTAP OFF
+set_global_assignment -name ENABLE_SIGNALTAP ON
 
 set_global_assignment -name SIGNALTAP_FILE debug/stp_scaler.stp
 
@@ -337,7 +337,7 @@ set_global_assignment -name CYCLONEII_OPTIMIZATION_TECHNIQUE SPEED
 set_global_assignment -name SYNTH_PROTECT_SDC_CONSTRAINT ON
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 
-set_global_assignment -name SEED 11
+set_global_assignment -name SEED 2
 set_global_assignment -name PHYSICAL_SYNTHESIS_COMBO_LOGIC ON
 set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_DUPLICATION ON
 set_global_assignment -name ROUTER_TIMING_OPTIMIZATION_LEVEL MAXIMUM
@@ -357,3 +357,4 @@ set_global_assignment -name FORCE_CONFIGURATION_VCCIO ON
 set_global_assignment -name VCCA_USER_VOLTAGE 3.3V
 set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SLD_FILE db/stp_scaler_2_auto_stripped.stp
