--- a/quartus/n64adv2_10m16sae144.qsf
+++ b/quartus/n64adv2_10m16sae144.qsf
@@ -1,4 +1,3 @@
-set_global_assignment -name FITTER_EFFORT "AUTO FIT"
 # -------------------------------------------------------------------------- #
 #
 # Copyright (C) 2020  Intel Corporation. All rights reserved.
@@ -42,7 +41,7 @@ set_global_assignment -name FAMILY "MAX 10"
 set_global_assignment -name DEVICE 10M16SAE144C8G
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:18:36  MAY 10, 2021"
-set_global_assignment -name LAST_QUARTUS_VERSION "22.1std.0 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "22.1std.2 Lite Edition"
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ENABLE_OCT_DONE OFF
@@ -310,19 +309,42 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files/10m16sae144
 
 set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to N64_CLK_i
 
-set_global_assignment -name OPTIMIZATION_MODE BALANCED
-set_global_assignment -name ALLOW_REGISTER_RETIMING OFF
+#set_instance_assignment -name FAST_INPUT_REGISTER ON -to nVDSYNC_L
+#set_instance_assignment -name FAST_INPUT_REGISTER ON -to VD_L*
 
+#set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to n64adv2_ppu_u|scaler_u|sdram_ctrl_u|cke_r
+#set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to n64adv2_ppu_u|scaler_u|sdram_ctrl_u|dqm_r
+#set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to n64adv2_ppu_u|scaler_u|sdram_ctrl_u|command_r
+#set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to n64adv2_ppu_u|scaler_u|sdram_ctrl_u|bank_r
+#set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to n64adv2_ppu_u|scaler_u|sdram_ctrl_u|addr_r
+#set_instance_assignment -name FAST_INPUT_REGISTER ON -to n64adv2_ppu_u|scaler_u|sdram_ctrl_u|rd_data_r
+#set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to n64adv2_ppu_u|scaler_u|sdram_ctrl_u|wr_data_r
+#set_instance_assignment -name FAST_OUTPUT_ENABLE_REGISTER ON -to n64adv2_ppu_u|scaler_u|sdram_ctrl_u|oe_data_r
+
+set_global_assignment -name OPTIMIZATION_MODE "AGGRESSIVE PERFORMANCE"
+set_global_assignment -name ALLOW_REGISTER_RETIMING ON
+
+set_global_assignment -name AUTO_ROM_RECOGNITION OFF
 set_global_assignment -name CYCLONEII_OPTIMIZATION_TECHNIQUE SPEED
-set_global_assignment -name SYNTH_PROTECT_SDC_CONSTRAINT ON
-set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
+#set_global_assignment -name SYNTH_PROTECT_SDC_CONSTRAINT ON
 
-set_global_assignment -name SEED 12
+set_global_assignment -name QII_AUTO_PACKED_REGISTERS NORMAL
+set_global_assignment -name FITTER_EFFORT "AUTO FIT"
+set_global_assignment -name SEED 11
+set_global_assignment -name ROUTER_LCELL_INSERTION_AND_LOGIC_DUPLICATION ON
+set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
+set_global_assignment -name PHYSICAL_SYNTHESIS_ASYNCHRONOUS_SIGNAL_PIPELINING ON
+set_global_assignment -name ROUTER_CLOCKING_TOPOLOGY_ANALYSIS ON
 set_global_assignment -name PHYSICAL_SYNTHESIS_COMBO_LOGIC ON
 set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_DUPLICATION ON
+set_global_assignment -name PHYSICAL_SYNTHESIS_EFFORT EXTRA
+set_global_assignment -name PLACEMENT_EFFORT_MULTIPLIER 16
+set_global_assignment -name ROUTER_EFFORT_MULTIPLIER 8
 set_global_assignment -name ROUTER_TIMING_OPTIMIZATION_LEVEL MAXIMUM
-set_global_assignment -name ROUTER_CLOCKING_TOPOLOGY_ANALYSIS ON
 
+
+## Misc Additions by QP
+## ====================
 
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH STILL AIR"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
