--- a/quartus/n64adv2_10m25sae144dev.qsf
+++ b/quartus/n64adv2_10m25sae144dev.qsf
@@ -310,11 +310,7 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files/10m25sae144dev
 
 
 # debug
-set_global_assignment -name ENABLE_SIGNALTAP ON
-
-set_global_assignment -name USE_SIGNALTAP_FILE stp2.stp
-set_global_assignment -name SIGNALTAP_FILE debug/stp_scaler.stp
-set_global_assignment -name SIGNALTAP_FILE debug/stp_scaler_2.stp
+set_global_assignment -name ENABLE_SIGNALTAP OFF
 
 
 ## Assignments for Synthesis and Fitter
@@ -372,6 +368,4 @@ set_global_assignment -name ENABLE_CONFIGURATION_PINS OFF
 set_global_assignment -name FORCE_CONFIGURATION_VCCIO ON
 set_global_assignment -name VCCA_USER_VOLTAGE 3.3V
 set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
-set_global_assignment -name SIGNALTAP_FILE stp2.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name SLD_FILE db/stp2_auto_stripped.stp
