--- a/quartus/n64adv2_10m25sae144dev.qsf
+++ b/quartus/n64adv2_10m25sae144dev.qsf
@@ -256,6 +256,11 @@ set_global_assignment -name VERILOG_INCLUDE_FILE ../lib/n64adv_cparams.vh
 set_global_assignment -name VERILOG_INCLUDE_FILE ../lib/n64adv2_config.vh
 set_global_assignment -name VERILOG_INCLUDE_FILE ../lib/videotimings.vh
 
+#task files
+set_global_assignment -name VERILOG_INCLUDE_FILE ../lib/getScanlineProfile.tasks.v
+set_global_assignment -name VERILOG_INCLUDE_FILE ../lib/setOSDConfig.tasks.v
+set_global_assignment -name VERILOG_INCLUDE_FILE ../lib/setVideoTimings.tasks.v
+
 #ip
 set_global_assignment -name QIP_FILE ../ip/system_pll.qip
 set_global_assignment -name QIP_FILE ../ip/chip_id.qip
@@ -339,7 +344,7 @@ set_global_assignment -name SYNTH_PROTECT_SDC_CONSTRAINT ON
 
 set_global_assignment -name QII_AUTO_PACKED_REGISTERS "SPARSE AUTO"
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
-set_global_assignment -name SEED 27
+set_global_assignment -name SEED 1
 #set_global_assignment -name SEED 16
 #set_global_assignment -name SEED 46
 set_global_assignment -name ROUTER_LCELL_INSERTION_AND_LOGIC_DUPLICATION ON
